--- a/donatello.com/common/scss/_colors.scss
+++ b/donatello.com/common/scss/_colors.scss
@@ -16,10 +16,13 @@ $link: #12aaaf;
 
 ////project settings
 $gray: #fcfcfc;
+$gray_primary: #AAAAAA;
+$gray_secondary: #dddddd;
+$gray_light: #fcfcfc;
 
 $red : #9a0000;
-$blue : #00d8fd;
-$green: #0eff9e;
+$blue : #0C3FFF;
+$green: #8BFFAC;
 $green_deep: #005f70;
 $green_dark: #24383f;
 $green_black: #003640;
