--- a/donatello.com/common/scss/_utilities.scss
+++ b/donatello.com/common/scss/_utilities.scss
@@ -27,7 +27,7 @@
 	margin-right: auto;
 	padding-left: 30px;
 	padding-right: 30px;	
-	box-sizing: border-box;
+	// box-sizing: border-box;
 	
 	@include break( sp ){
 			padding-left: 10%;
@@ -46,7 +46,6 @@
 
 .clearfix{
 	@include clearfix();
-	@include has-layout;
 }
 
 
@@ -99,31 +98,15 @@
 .large{ font-size: $large;}
 .small{ font-size: $small; }
 
-.wfBlack{
-	font-family: $fontFamily_wf_black;
+.dinBold{
+	font-family: $din_bold;
 }
-.wfUltra{
-	font-family: $fontFamily_wf_ultra;
+.dinMedium{
+	font-family: $din_medium;
 }
-.wfSemi{
-	font-family: $fontFamily_wf_semi;
+.dinLight{
+	font-family: $din_light;
 }
-.wfBold{
-	font-family: $fontFamily_wf_bold;
-}
-.wfRegular{
-	font-family: $fontFamily_wf_regular;
-}
-.wfMedium{
-	font-family: $fontFamily_wf_medium;
-}
-.wfLight{
-	font-family: $fontFamily_wf_light;
-}
-.damion{
-	font-family: $fontFamily_damion;
-}
-
 
 //////////////////
 
@@ -154,34 +137,4 @@
 		$top : 0, 
 		$font-size: 22px
 	 );
-}
-
-.icon-mouse{
-
-	width: 17px;
-	height: 27px;
-	margin-right: auto;
-	margin-left: auto;
-	position: relative;
-	display: block;
-	border: solid 1px #fff;
-	border-radius: 5px;
-	
-	&:after{
-		content: " ";
-		display: block;
-		width: 3px;
-		height: 3px;
-		margin-right: auto;
-		margin-left: auto;
-		position: absolute;
-		top: 5px;
-		right: 0;
-		left: 0;
-		animation: mouseScroll 2s ease-in-out 0.8s infinite normal forwards;
-		border-radius: 100%;
-		background-color: #fff;
-		
-	}
-
 }
