index コーディング途中経過

--- a/donatello.com/common/scss/_colors.scss
+++ b/donatello.com/common/scss/_colors.scss
@@ -16,16 +16,15 @@ $link: #12aaaf;
 
 ////project settings
 $gray: #fcfcfc;
-$gray_primary: #AAAAAA;
-$gray_secondary: #dddddd;
+$gray_primary: #666;
+$gray_secondary: #AAAAAA;
+$gray_third: #dddddd;
 $gray_light: #fcfcfc;
 
-$red : #9a0000;
+$border: #ccc;
+
 $blue : #0C3FFF;
 $green: #8BFFAC;
-$green_deep: #005f70;
-$green_dark: #24383f;
-$green_black: #003640;
 
 
 $instagram: #3f729b;
