--- a/donatello.com/common/scss/_utilities.scss
+++ b/donatello.com/common/scss/_utilities.scss
@@ -85,8 +85,6 @@
 
 
 
-
-
 //////////////////
 
 // typography
@@ -107,6 +105,8 @@
 .dinLight{
 	font-family: $din_light;
 }
+
+
 
 //////////////////
 
@@ -137,4 +137,35 @@
 		$top : 0, 
 		$font-size: 22px
 	 );
+}
+.icon-address{
+	@include iconfont(
+		$content: '\f041',
+		$icon-margin-right: 0, 			
+		$top : 0, 
+		$font-size: 22px
+	 );
+}
+
+
+
+//////////////////
+
+// js effect
+
+//////////////////
+
+.ef{
+	transition: all 0.5s ease-in-out 0s ;
+	
+	&.ef-floatup{
+		transform: translateY( 10px );
+		opacity: 0;
+		
+		&.doEffect {
+			opacity: 1;
+			transform: translateY(0);	
+		}
+	}
+
 }
