index PC モジュール構成

--- a/donatello.com/common/css/style.css
+++ b/donatello.com/common/css/style.css
@@ -102,8 +102,8 @@ a img:focus
 }@media screen and (max-width: 580px)
 {
     .wrap
-    {padding-right: 10%;
-        padding-left: 10%;
+    {padding-right: 5%;
+        padding-left: 5%;
     }
 }.clearfix
 {
@@ -370,6 +370,12 @@ a img:focus
 }.snsList
 {
     margin-top: 100px;text-align: center;
+}@media screen and (max-width: 780px)
+{
+    .snsList
+    {
+        margin-top: 50px;
+    }
 }.snsList li
 {display: inline-block;
 
@@ -385,19 +391,45 @@ a img:focus
 {font-size: .85714em;
 
     margin-top: 45px;padding-top: 50px;padding-bottom: 15px;text-align: center;letter-spacing: .05em;color: #666;background-color: #fcfcfc;
+}@media screen and (max-width: 780px)
+{
+    .siteFooter
+    {
+        padding-top: 40px;
+    }
+}.siteFooter_ci
+{
+    margin-bottom: 20px;
+}@media screen and (max-width: 780px)
+{
+    .siteFooter_ci
+    {
+        margin-bottom: 10px;
+    }
 }.siteFooter_ci .ci
-{display: inline-block;
-
-    margin-bottom: 20px;vertical-align: middle;
+{
+    display: inline-block;vertical-align: middle;
 }.siteFooter_ci .ci.-old
 {
     margin-left: 30px;
 }.siteFooter_info
 {
     font-weight: 500;margin-bottom: 15px;
+}@media screen and (max-width: 780px)
+{
+    .siteFooter_info
+    {
+        margin-bottom: 10px;
+    }
 }.siteFooter_address
 {
     margin-bottom: 45px;
+}@media screen and (max-width: 780px)
+{
+    .siteFooter_address
+    {
+        margin-bottom: 30px;
+    }
 }.siteFooter_address .address
 {
     font-style: normal;margin-bottom: 20px;
@@ -486,145 +518,6 @@ body:before
 {left: 100%;
 
     width: 100%;
-}.index .slick-slider
-{
-    position: relative;display: block;box-sizing: border-box;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;-webkit-touch-callout: none;-ms-touch-action: pan-y;touch-action: pan-y;-webkit-tap-highlight-color: transparent;
-}.index .slick-list
-{
-    position: relative;display: block;overflow: hidden;margin: 0;padding: 0;
-}.index .slick-list:focus
-{
-    outline: none;
-}.index .slick-list.dragging
-{
-    cursor: pointer        ;cursor: hand;
-}.index .slick-slider .slick-track,
-.index .slick-slider .slick-list
-{
-    -webkit-transform: translate3d(0, 0, 0)                                ;-ms-transform: translate3d(0, 0, 0);transform: translate3d(0, 0, 0);
-}.index .slick-track
-{
-    position: relative;top: 0;left: 0;display: block;margin-right: auto;margin-left: auto;
-}.index .slick-track:before,
-.index .slick-track:after
-{display: table;
-
-    content: '';
-}.index .slick-track:after
-{
-    clear: both;
-}.slick-loading .index .slick-track
-{
-    visibility: hidden;
-}.index .slick-slide
-{display: none;
-    float: left;height: 100%;min-height: 1px;
-}[dir='rtl'] .index .slick-slide
-{
-    float: right;
-}.index .slick-slide img
-{
-    display: block;
-}.index .slick-slide.slick-loading img
-{
-    display: none;
-}.index .slick-slide.dragging img
-{
-    pointer-events: none;
-}.slick-initialized .index .slick-slide
-{
-    display: block;
-}.slick-loading .index .slick-slide
-{
-    visibility: hidden;
-}.slick-vertical .index .slick-slide
-{
-    display: block;height: auto;border: 1px solid transparent;
-}.index .slick-arrow.slick-hidden
-{
-    display: none;
-}@font-face
-{
-    .index
-    {
-        font-family: 'slick';font-weight: normal;font-style: normal;src: url('../js/slick/fonts/slick.eot');src: url('../js/slick/fonts/slick.eot?#iefix') format('embedded-opentype'),url('../js/slick/fonts/slick.woff') format('woff'),slick-font-url('slick.ttf') format('truetype'),slick-font-url('slick.svg#slick') format('svg');
-    }
-}.index .slick-prev,
-.index .slick-next
-{font-size: 0;line-height: 0;
-
-    position: absolute;top: 50%;display: block;width: 20px;height: 20px;padding: 0;cursor: pointer;-webkit-transform: translate(0, -50%);-ms-transform: translate(0, -50%);transform: translate(0, -50%);color: transparent;border: none;outline: none;background: transparent;
-}.index .slick-prev:hover,
-.index .slick-prev:focus,
-.index .slick-next:hover,
-.index .slick-next:focus
-{color: transparent;
-    outline: none;background: transparent;
-}.index .slick-prev:hover:before,
-.index .slick-prev:focus:before,
-.index .slick-next:hover:before,
-.index .slick-next:focus:before
-{
-    opacity: 1;
-}.index .slick-prev.slick-disabled:before,
-.index .slick-next.slick-disabled:before
-{
-    opacity: .25;
-}.index .slick-prev:before,
-.index .slick-next:before
-{
-    font-family: 'slick';font-size: 20px;line-height: 1;opacity: .75;color: #fff;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale;
-}.index .slick-prev
-{
-    left: -25px;
-}[dir='rtl'] .index .slick-prev
-{right: -25px;
-    left: auto;
-}.index .slick-prev:before
-{
-    content: '←';
-}[dir='rtl'] .index .slick-prev:before
-{
-    content: '→';
-}.index .slick-next
-{
-    right: -25px;
-}[dir='rtl'] .index .slick-next
-{right: auto;
-    left: -25px;
-}.index .slick-next:before
-{
-    content: '→';
-}[dir='rtl'] .index .slick-next:before
-{
-    content: '←';
-}.index .slick-dotted.slick-slider
-{
-    margin-bottom: 30px;
-}.index .slick-dots
-{
-    position: absolute;bottom: -25px;display: block;width: 100%;margin: 0;padding: 0;list-style: none;text-align: center;
-}.index .slick-dots li
-{
-    position: relative;display: inline-block;width: 20px;height: 20px;margin: 0 5px;padding: 0;cursor: pointer;
-}.index .slick-dots li button
-{font-size: 0;line-height: 0;display: block;width: 20px;height: 20px;padding: 5px;cursor: pointer;color: transparent;
-    border: 0;outline: none;background: transparent;
-}.index .slick-dots li button:hover,
-.index .slick-dots li button:focus
-{
-    outline: none;
-}.index .slick-dots li button:hover:before,
-.index .slick-dots li button:focus:before
-{
-    opacity: 1;
-}.index .slick-dots li button:before
-{font-family: 'slick';font-size: 6px;line-height: 20px;
-
-    position: absolute;top: 0;left: 0;width: 20px;height: 20px;content: '•';text-align: center;opacity: .25;color: #000;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale;
-}.index .slick-dots li.slick-active button:before
-{opacity: .75;
-    color: #000;
 }.index .siteHeader svg polygon,
 .index .siteHeader svg path
 {
@@ -636,13 +529,31 @@ body:before
 {position: relative;
 
     height: 100vh;text-align: center;background-color: blue;
+}.index .mainvisual .wrap
+{position: absolute;top: 50%;right: 0;left: 0;box-sizing: border-box;
+    width: 100%;margin-right: auto;margin-left: auto;-webkit-transform: translateY(-50%);-ms-transform: translateY(-50%);transform: translateY(-50%);
 }.index .mainvisual_copy
-{position: absolute;top: 50%;right: 0;left: 0;
-
-    width: 100%;margin-right: auto;margin-left: auto;-webkit-transform: translateY(-50%);-ms-transform: translateY(-50%);transform: translateY(-50%);color: #fff;
-}.index .mainvisual_copy .firstRow
+{
+    color: #fff;
+}.index .mainvisual_copy .firstRow,
+.index .mainvisual_copy .secondRow
 {
     margin-right: .5em;
+}@media screen and (max-width: 580px)
+{
+    .index .mainvisual_copy .firstRow,
+    .index .mainvisual_copy .secondRow
+    {display: block;
+
+        margin-right: 0;
+    }
+}@media screen and (max-width: 580px)
+{
+    .index .mainvisual_copy .lastRow
+    {display: block;
+
+        margin-right: -.5em;
+    }
 }.index .mainvisual_copy_en
 {font-family: 'URW DIN Medium';font-size: 50px;
 
@@ -663,6 +574,9 @@ body:before
 }.index .topics a
 {
     color: inherit;
+}.index .topics .wrap
+{
+    white-space: nowrap;text-overflow: ellipsis;
 }.index .topics .update
 {font-size: .85714em;
     line-height: 1;
@@ -677,13 +591,32 @@ body:before
 }.index .topics .update_info
 {
     margin-left: 0;
+}.index .topics .slick-slide
+{
+    transition: all .3s cubic-bezier(.785, .135, .15, .86) 0s;
+}.index .topics .slick-slide.slick-current
+{
+    -webkit-transform: translateX(0)                                ;-ms-transform: translateX(0);transform: translateX(0);
 }.index .introduction
 {
-    padding-top: 75px;padding-bottom: 75px;text-align: center;color: #fff;text-shadow: 0 0 10px #aaa;
+    margin-bottom: 115px;padding-top: 75px;padding-bottom: 75px;text-align: center;color: #fff;text-shadow: 0 0 10px #aaa;
+}@media screen and (max-width: 780px)
+{
+    .index .introduction
+    {
+        margin-bottom: 50px;padding-top: 50px;padding-bottom: 50px;
+    }
 }.index .introduction_index
 {font-family: 'URW DIN Medium';font-size: 2em;
 
     margin-bottom: 40px;letter-spacing: .33em;
+}@media screen and (max-width: 780px)
+{
+    .index .introduction_index
+    {font-size: 1.4em;
+
+        margin-bottom: 25px;
+    }
 }.index .introduction_content
 {line-height: 2em;
 
@@ -691,18 +624,43 @@ body:before
 }.index .siteMap
 {
     display: -webkit-box                                                                                                                                ;display: -webkit-flex;display: -ms-flexbox;display:         flex;flex-direction: row;-webkit-box-orient: horizontal;-webkit-box-direction: normal;-webkit-flex-direction: row;-ms-flex-direction: row;-webkit-box-pack: justify;-webkit-justify-content: space-between;-ms-flex-pack: justify;justify-content: space-between;-webkit-box-align: stretch;-webkit-align-items: stretch;-ms-flex-align: stretch;align-items: stretch;
+}@media screen and (max-width: 780px)
+{
+    .index .siteMap
+    {
+        -webkit-flex-wrap: wrap                                                ;-ms-flex-wrap: wrap;flex-wrap: wrap;
+    }
 }.index .siteMap li
 {line-height: 1;display: block;
 
     width: calc( 25% - 45px);
+}@media screen and (max-width: 780px)
+{
+    .index .siteMap li
+    {
+        width: 49%;
+    }
 }.index .siteMap li a
 {position: relative;display: block;
 
     padding-top: 50px;padding-right: 30px;padding-bottom: 50px;color: inherit;border-top: solid 1px #ccc;border-bottom: solid 1px #ccc;
+}@media screen and (max-width: 780px)
+{
+    .index .siteMap li a
+    {
+        padding-top: 25px;padding-bottom: 25px;border-top: none;
+    }
 }.index .siteMap li a:after
 {position: absolute;top: 0;right: 0;bottom: 0;display: block;width: 30px;height: 10px;margin: auto;
 
     content: '';background: url(../img/icon-arrow-next.svg) center center no-repeat;background-size: 100% auto;
+}@media screen and (max-width: 780px)
+{
+    .index .siteMap li a:after
+    {right: 10px;
+
+        width: 25px;
+    }
 }.index .siteMap_en
 {font-family: 'URW DIN Bold';font-size: 2em;
 
