--- a/donatello.com/common/scss/_modules.scss
+++ b/donatello.com/common/scss/_modules.scss
@@ -357,11 +357,25 @@
 	&List{
 		margin-top: 100px;
 		text-align: center;
+		
+		@include break( tab ){
+			margin-top: 50px;
+		}
+
 		li{
 			vertical-align: middle;
 			display: inline-block;
 			
 			&:first-child{
+				// &:after{
+				// 	content:" ";
+				// 	width: 30px;
+				// 	height: 1px;
+				// 	margin-left: 20px;
+				// 	margin-right: 20px;
+				// 	display: inline-block;
+				// 	background-color: $border;
+				// }
 				margin-right: 40px;
 			}
 		}
@@ -389,10 +403,19 @@
 	letter-spacing: 0.05em;
 	text-align: center;
 	background-color: $gray_light;
+
+	@include break( tab ){
+		padding-top: 40px;
+	}
+	
 	
 	&_ci{
+		margin-bottom: 20px;
+		@include break( tab ){
+			margin-bottom: 10px;
+		}
+		
 		.ci{
-			margin-bottom: 20px;
 			display: inline-block;
 			vertical-align: middle;
 			
@@ -405,11 +428,19 @@
 	&_info{
 		font-weight: 500;
 		margin-bottom: 15px;
+
+		@include break( tab ){
+			margin-bottom: 10px;
+		}
+	
 	}
 	
 
 	&_address{
 		margin-bottom: 45px;
+		@include break( tab ){
+			margin-bottom: 30px;
+		}
 		
 		.address{
 			font-style: normal;
