--- a/donatello.com/common/js/slick/slick-theme.scss
+++ b/donatello.com/common/js/slick/slick-theme.scss
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 // Default Variables
 
 // Slick icon entity codes outputs the following
@@ -19,50 +21,41 @@ $slick-opacity-default: 0.75 !default;
 $slick-opacity-on-hover: 1 !default;
 $slick-opacity-not-active: 0.25 !default;
 
-// @function slick-image-url($url) {
-//     @if function-exists(image-url) {
-//         @return "./";
-//         // @return image-url($url);//
-//     }
-//     @else {
-//         @return url($slick-loader-path + $url);
-//     }
-// }
+@function slick-image-url($url) {
+    @if function-exists(image-url) {
+        @return image-url($url);
+    }
+    @else {
+        @return url($slick-loader-path + $url);
+    }
+}
 
-// @function slick-font-url($url) {
-//     @if function-exists(font-url) {
-//         // @return ;
-//         @return font-url($url);
-//     }
-//     @else {
-//         @return url($slick-font-path + $url);
-//     }
-// }
+@function slick-font-url($url) {
+    @if function-exists(font-url) {
+        @return font-url($url);
+    }
+    @else {
+        @return url($slick-font-path + $url);
+    }
+}
 
 /* Slider */
 
 .slick-list {
     .slick-loading & {
-        // background: #fff slick-image-url("ajax-loader.gif") center center no-repeat;
+        background: #fff slick-image-url("ajax-loader.gif") center center no-repeat;
     }
 }
 
 /* Icons */
 @if $slick-font-family == "slick" {
-    // @font-face {
-    //     font-family: "slick";
-    //     src: slick-font-url("slick.eot");
-    //     src: slick-font-url("slick.eot?#iefix") format("embedded-opentype"), slick-font-url("slick.woff") format("woff"), slick-font-url("slick.ttf") format("truetype"), slick-font-url("slick.svg#slick") format("svg");
-    //     font-weight: normal;
-    //     font-style: normal;
-    // }
     @font-face {
         font-family: "slick";
-        src: url("../js/slick/fonts/slick.eot");
-        src: url("../js/slick/fonts/slick.eot?#iefix") format("embedded-opentype"), url("../js/slick/fonts/slick.woff") format("woff"), slick-font-url("slick.ttf") format("truetype"), slick-font-url("slick.svg#slick") format("svg");
+        src: slick-font-url("slick.eot");
+        src: slick-font-url("slick.eot?#iefix") format("embedded-opentype"), slick-font-url("slick.woff") format("woff"), slick-font-url("slick.ttf") format("truetype"), slick-font-url("slick.svg#slick") format("svg");
         font-weight: normal;
         font-style: normal;
-    }    
+    }
 }
 
 /* Arrows */
