--- a/donatello.com/common/scss/_top.scss
+++ b/donatello.com/common/scss/_top.scss
@@ -9,7 +9,16 @@
 	svg polygon,
 	svg path
 	{
+		transition: transition();
 		fill: #fff;
+	}
+
+	&.scrolled {
+		svg polygon,
+		svg path
+		{
+			fill: $green;
+		}		
 	}
 
 	a{
@@ -66,11 +75,20 @@
 			font-size: 50px;
 			letter-spacing: 0.261em;
 			font-family: $din_medium;
+			
+			@include break( sp ){
+				margin-bottom: 20px;
+				font-size: 30px;
+			}
 		}
 		&_ja{
 			font-weight: 500;
 			letter-spacing: 0.33em;
 			font-size: #{(23 / 14)}em;
+			@include break( sp ){
+				font-size: 15px;
+			}
+			
 		}
 	}
 
@@ -164,8 +182,8 @@
 	
 	@include break( tab ){
 		margin-bottom: 50px;
-		padding-top: 50px;
-		padding-bottom: 50px;
+		padding-top: 55px;
+		padding-bottom: 55px;
 	}
 
 	
@@ -176,6 +194,7 @@
 		font-size: $xlarge;
 		
 		@include break( tab ){
+			letter-spacing: 0.2em;
 			margin-bottom: 25px;
 			font-size: 1.4em;
 		}
@@ -216,7 +235,7 @@
 		display: block;
 		
 		@include break( tab ){
-			width: 49%;
+			width: 48%;
 		}
 		
 		a{
@@ -268,6 +287,10 @@
 		color: $blue;
 		font-size: $xlarge;
 		font-family: $din_bold;
+		
+		@include break( tab ){
+			font-size: 1.5em;
+		}		
 	}
 
 	&_ja{
